@@ -54,6 +54,7 @@
 <h2>WinMerge 2.10 Release Notes</h2>
 <ul>
   <li><a href="#about">About This Release</a></li>
+  <li><a href="#new2102">What Is New in 2.10.2?</a></li>
   <li><a href="#new210">What Is New in 2.10?</a></li>
   <li><a href="#new210RC">What Is New in 2.10 RC?</a></li>
   <li><a href="#new2910">What Is New in 2.9.10 Beta?</a></li>
@@ -72,6 +73,37 @@ as a recommended release.
 Please submit bug reports to our <a href=
 "https://sourceforge.net/tracker/?group_id=13216&amp;atid=113216">bug-tracker</a>.
 </p>
+
+<h3><a name="new2102">What Is New in 2.10.2?</a></h3>
+<p>
+WinMerge 2.10.2 is a bug fix update for the 2.10.0 release. There are no new
+features or other significant changes. Most notable fixes are the fixes for
+the installer.
+</p>
+
+<h4>Bugs fixed</h4>
+<ul>
+  <li>Installer problems (not setting TortoiseSVN integration, missing
+    icons)</li>
+  <li>Case-sensitive regular expression search in editor did not work</li>
+  <li>Giving path to file and folder to command line did not work
+   (e.g <code>WinMergeU folder/file.txt folder2</code> - did not open
+   <code>file.txt</code> from <code>folder2</code>)
+  </li>
+  <li>If a message was shown during the file loading the location pane did not
+   show any differences</li>
+  <li>Fix manual URL in Readme.txt</li>
+</ul>
+
+<h4>Translations</h4>
+<p>
+New translation for Galician was added. Two translations were updated:
+</p>
+<ul>
+  <li>Czech</li>
+  <li>Ukrainian</li>
+</ul>
+
 
 <h3><a name="new210">What Is New in 2.10?</a></h3>
 <p>
